# personal-library

./: .gitignore  README.md
backend/: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2c65267e41e3_add_tags_and_article_tags_tables.py  5da8870171d5_add_chapter_suffix_and_user_nickname.py  81b158d0502b_add_novels_chapters_reading_progresses.py  94e733fd9f33_add_collections_and_collection_articles_.py  a1b2c3d4e5f6_add_fonts_table.py  a511d67503be_add_articles_table.py  b2c3d4e5f6a7_add_article_content_hash.py  c2c75098a151_create_users_table.py  d4e5f6a7b8c9_add_chapters_fields_and_novel_soft_delete.py  e1b42610b358_add_user_settings_table.py  f8a9b0c1d2e3_fix_cover_path_url_format.py
backend/requirements/: base.in  base.txt  dev.in  dev.txt
backend/src/personal_library/: config.py  database.py  main.py
backend/src/personal_library/api/: deps.py
backend/src/personal_library/api/v1/: admin.py  articles.py  auth.py  collections.py  fonts.py  novels.py  router.py  settings.py  tags.py  upload.py
backend/src/personal_library/core/: __init__.py  chapter_parser.py  file_extractor.py  security.py  xss.py
backend/src/personal_library/domain/models/: __init__.py  article.py  base.py  chapter.py  collection.py  font.py  novel.py  reading_progress.py  settings.py  tag.py  user.py
backend/tests/: conftest.py  test_article.py  test_article_update.py  test_auth.py  test_collection.py  test_novel.py  test_settings.py  test_sort.py  test_tag.py  test_trash.py  test_upload.py
frontend/: components.d.ts  (+5 more)
(+53 files in other folders)
