[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal_library"
version = "0.1.0"
description = "Personal library management system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.29,<0.30",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic-settings>=2.1,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "bcrypt>=4.1,<5.0",
    "structlog>=24.0,<25.0",
    "email-validator>=2.0,<3.0",
    "chardet>=5.0,<6.0",
    "Pillow>=10.0,<11.0",
    "ebooklib>=0.18,<1.0",
    "PyPDF2>=3.0,<4.0",
    "python-docx>=1.0,<2.0",
    "fonttools>=4.0,<5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.black]
line-length = 100
target-version = ["py311"]